# ulkan

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.agent/docs/: ULKAN_MANUAL.md
.agent/docs/decisions/: 001-single-source-of-truth-symlinks.md  001-upgrade-command.md  README.md
.agent/docs/guidelines/: README.md
.agent/docs/product/: ARCHITECTURE.md  VISION.md
.agent/skills/guidelines-creator/: SKILL.md
.agent/skills/product-docs-creator/assets/: ARCHITECTURE-TEMPLATE.md
.agent/skills/react-best-practices/: SKILL.md  metadata.json
.agent/skills/skill-creator/assets/: SKILL-TEMPLATE.md
.agent/skills/tools-creator/assets/: TOOL-TEMPLATE.md
.agent/skills/workflows-creator/: SKILL.md
.agent/tools/: README.md
.agent/tools/scripts/: lint_agent_setup.py  sync_agents_docs.py
.agent/workflows/: bug-fix.md  build.md  docs.md  feat.md  feature-development.md  fix.md  git-flow.md  migrate.md  product-inception.md  refact.md  refactoring.md  release.md
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: install.sh
src/ulkan/: agents.py  builder.py  commands.py  generator.py  manager.py  migrator.py  styles.py  syncer.py  templates.py  updater.py
src/ulkan/blueprints/: AGENTS.md
src/ulkan/blueprints/docs/product/: README.md
src/ulkan/blueprints/rules/: README.md
src/ulkan/blueprints/skills/: README.md
src/ulkan/blueprints/tools/scripts/: README.md  (+2 more)
src/ulkan/blueprints/workflows/: README.md  add-to-workflow.md  fix.md  git-flow.md  refact.md
src/ulkan/registry/workflows/: feat.md  fix.md  refact.md
src/ulkan/templates/: __init__.py  agents.py  manual.py  readme.py  scripts.py  skills.py  workflows.py
src/ulkan/templates/docs/: ULKAN_MANUAL.md
(+16 files in other folders)
