[project]
name = "ulkan"
version = "0.1.0"
description = "The Agentic Scaffolding Tool - Bootstrap AI-agent-ready projects in seconds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Javier Grau", email = "graujavier@gmail.com" }
]
keywords = [
    "ai",
    "agent",
    "scaffolding",
    "cli",
    "claude",
    "gemini",
    "copilot",
    "codex",
    "agentic",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.5",
    "rich>=13.8.1",
    "pyfiglet>=1.0.2",
    "inquirerpy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/graujavier/ulkan"
Documentation = "https://github.com/graujavier/ulkan#readme"
Repository = "https://github.com/graujavier/ulkan"
Issues = "https://github.com/graujavier/ulkan/issues"
Changelog = "https://github.com/graujavier/ulkan/blob/main/CHANGELOG.md"

[project.scripts]
ulkan = "ulkan.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ulkan"]

[tool.mypy]
strict = true
ignore_missing_imports = true


[dependency-groups]
dev = [
    "black>=24.4.2",
]
